Update JDK config to 21 preview